Added readme and updated instructions

--- a/final_WM.ipynb
+++ b/final_WM.ipynb
@@ -1,6 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "264a5379-0452-437e-b3cc-752e794bc8d3",
+   "metadata": {},
+   "source": [
+    "# Generate MedDRA Terms\n",
+    "\n",
+    "Program modes:\n",
+    "\n",
+    "1. **AE list WHOART indexing**\n",
+    "\n",
+    "![Mode 1](images/mode1.jpeg)\n",
+    "\n",
+    " - Required files: \n",
+    "    * `AE list.xlsx`\n",
+    "    * `WHOART-MedDRA Bridge.xlsx`\n",
+    "    * MedDRA_English 폴더 $\\rightarrow$ MedAscii 폴더 $\\rightarrow$ `llt.asc`\n",
+    "    * MedDRA_English 폴더 $\\rightarrow$ MedAscii 폴더 $\\rightarrow$ `mdhier.asc`\n",
+    " - Effect: `AE list.xlsx`에 있는 WHOART 용어1을 `WHOART-MedDRA Bridge.xlsx`에 매칭한 후, `llt.asc`/`mdhier.asc` 에 있는 MedDRA SOC 및 PT 컬럼을 붙여 놓기.\n",
+    "\n",
+    "2. **Bridge Extension**\n",
+    "\n",
+    "![Mode 2](images/mode2.jpeg)\n",
+    "\n",
+    " - Required files:\n",
+    "    * `WHOART-MedDRA Bridge.xlsx`\n",
+    "    * MedDRA_English 폴더 $\\rightarrow$ MedAscii 폴더 $\\rightarrow$ `llt.asc`\n",
+    "    * MedDRA_English 폴더 $\\rightarrow$ MedAscii 폴더 $\\rightarrow$ `mdhier.asc`\n",
+    " - Effect: `WHOART-MedDRA Bridge.xlsx`에 있는 MedDRA LLT을 `llt.asc`/`mdhier.asc` 에 있는 MedDRA SOC 및 PT 컬럼을 붙여 놓기.\n",
+    " \n",
+    "3. **AE list Extension**\n",
+    "\n",
+    "![Mode 3](images/mode3.jpeg)\n",
+    "\n",
+    " - Required files: \n",
+    "    * `AE list.xlsx`\n",
+    "    * MedDRA_English 폴더 $\\rightarrow$ MedAscii 폴더 $\\rightarrow$ `llt.asc`\n",
+    "    * MedDRA_English 폴더 $\\rightarrow$ MedAscii 폴더 $\\rightarrow$ `mdhier.asc`\n",
+    " - Effect: `AE list.xlsx`에 있는 MedDRA LLT을 `llt.asc`/`mdhier.asc` 에 있는 MedDRA SOC 및 PT 컬럼을 붙여 놓기."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62739386-9d5c-47e3-88fc-5190f1600d1d",
+   "metadata": {},
+   "source": [
+    "### Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d75f4b8-ba94-46f1-a222-454cff0ddead",
+   "metadata": {},
+   "source": [
+    "아래 cell을 선택하고 (오른 마우스 클릭) 파랗게 선택된 상태에 cell을 실행하세요 `Shift` + `Enter`\n",
+    "* Cell 옆에 별표 `[*]`은 계산중이나 사용자 입력을 기다리는 뜻을 의미합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "51b0423b-3bd2-448c-82ea-b8c004b5a39c",
@@ -87,6 +145,14 @@
    "source": [
     "import main\n",
     "items, mode = main.prompt_modes()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ac48b89-e734-4079-b6b8-400edfc306a3",
+   "metadata": {},
+   "source": [
+    "에러가 발생할 경우, 위 패널에 중지 (▣)을 누르시고 , cell을 다시 실행 하세요 (1. cell 선택 2. cell 실행 `Shift` + `Enter`)"
    ]
   },
   {
@@ -524,6 +590,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f6c94d5-650b-48eb-ace3-74ae2b5aef78",
+   "metadata": {},
+   "source": [
+    "파일 내보내기: \n",
+    "1. `to_excel(\"파일 이름\")`함수 안에 원하는 파일 이름으로 편집\n",
+    "2. Cell을 선택하고 실행 해주세요 (`Shift` + `Enter`).\n",
+    "3. 왼쪽 파일 탐색기에서 엑셀 파일이 만들어집니다. 파일에 오른쪽 마우스 클릭 하시고 `download` 옵션을 선택하세요. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "e80b808e-75df-45f3-baf1-82f755f2b2ca",
@@ -531,6 +608,14 @@
    "outputs": [],
    "source": [
     "final.to_excel(\"파일 이름.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc96551-e1a6-4dff-af72-9af28465ec7c",
+   "metadata": {},
+   "source": [
+    "프로그램 종료: 브라우저 창을 닫은 후, 저장에 대한 메시지가 나타나면 저장 안 함을 클릭하세요"
    ]
   }
  ],
@@ -550,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
