Minor changes to markdown

--- a/final_WM.ipynb
+++ b/final_WM.ipynb
@@ -54,8 +54,10 @@
    "id": "9d75f4b8-ba94-46f1-a222-454cff0ddead",
    "metadata": {},
    "source": [
-    "아래 cell을 선택하고 (오른 마우스 클릭) 파랗게 선택된 상태에 cell을 실행하세요 `Shift` + `Enter`\n",
-    "* Cell 옆에 별표 `[*]`은 계산중이나 사용자 입력을 기다리는 뜻을 의미합니다."
+    "Cell을 순서대로 선택하고 (오른 마우스 클릭) 파랗게 선택된 상태에 cell을 실행하세요 `Shift` + `Enter`\n",
+    "* Cell 옆에 별표 `[*]`은 계산중이나 사용자 입력을 기다리는 뜻을 의미합니다.\n",
+    "* 파일을 모두 업로드 해야 진행이 가능합니다. \n",
+    "* 파일을 다시 업로드하는 경우, cell을 다시 실행 하세요 (1. cell 선택 2. cell 실행 `Shift` + `Enter`)"
    ]
   },
   {
@@ -149,10 +151,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac48b89-e734-4079-b6b8-400edfc306a3",
+   "id": "3d5e3088-cb3a-4608-8d5e-9f49e4f1d948",
    "metadata": {},
    "source": [
-    "에러가 발생할 경우, 위 패널에 중지 (▣)을 누르시고 , cell을 다시 실행 하세요 (1. cell 선택 2. cell 실행 `Shift` + `Enter`)"
+    "Cell을 순서대로 선택하고 (오른 마우스 클릭) 파랗게 선택된 상태에 cell을 실행하세요 `Shift` + `Enter`\n",
+    "* 에러나 다시 입력해야하는 경우의 패널 중지 (▣)을 누르시고, cell을 다시 실행 하세요"
    ]
   },
   {
