--- a/final_WM.ipynb
+++ b/final_WM.ipynb
@@ -57,6 +57,7 @@
     "Cell을 순서대로 선택하고 (오른 마우스 클릭) 파랗게 선택된 상태에 cell을 실행하세요 `Shift` + `Enter`\n",
     "* Cell 옆에 별표 `[*]`은 계산중이나 사용자 입력을 기다리는 뜻을 의미합니다.\n",
     "* 파일을 모두 업로드 해야 진행이 가능합니다. \n",
+    "* 파일 업로드 후, `(1)` 표시 확인.\n",
     "* 파일을 다시 업로드하는 경우, cell을 다시 실행 하세요 (1. cell 선택 2. cell 실행 `Shift` + `Enter`)"
    ]
   },
@@ -154,8 +155,7 @@
    "id": "3d5e3088-cb3a-4608-8d5e-9f49e4f1d948",
    "metadata": {},
    "source": [
-    "Cell을 순서대로 선택하고 (오른 마우스 클릭) 파랗게 선택된 상태에 cell을 실행하세요 `Shift` + `Enter`\n",
-    "* 에러나 다시 입력해야하는 경우의 패널 중지 (▣)을 누르시고, cell을 다시 실행 하세요"
+    "에러나 다시 입력해야하는 경우의 패널 중지 (▣)을 누르시고, cell을 다시 실행하세요"
    ]
   },
   {
