--- a/final_WM.ipynb
+++ b/final_WM.ipynb
@@ -28,6 +28,7 @@
     "2. **MedDRA LLT Extension** \n",
     "\n",
     "`AE list.xlsx`에 있는 MedDRA LLT을 `llt.asc`/`mdhier.asc` 에 있는 MedDRA SOC 및 PT 컬럼을 붙여 놓기.\n",
+    "* 참고 사항: `AE list.xlsx`의 MedDRA LLT Term 언어가 `llt.asc`/`mdhier.asc`의 언어와 동일해야합니다 (예: 한국어, 한국어)\n",
     "\n",
     "![Mode 3](images/mode2.jpeg)\n",
     "\n",
@@ -400,7 +401,7 @@
    },
    "source": [
     "파일 내보내기: \n",
-    "1. `to_excel(\"파일 이름\")`함수 안에 원하는 파일 이름으로 편집\n",
+    "1. `to_excel(\"파일 이름\")`함수 안에 원하는 파일 이름으로 편집 (끝에 \".xlsx\"은 필수).\n",
     "2. Cell을 선택하고 실행 해주세요 (`Shift` + `Enter`).\n",
     "3. 왼쪽 파일 탐색기에서 엑셀 파일이 만들어집니다. 파일에 오른쪽 마우스 클릭 하시고 `download` 옵션을 선택하세요. "
    ]
