--- a/final_WM.ipynb
+++ b/final_WM.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "51b0423b-3bd2-448c-82ea-b8c004b5a39c",
    "metadata": {
     "deletable": false,
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e6f2c8716174ca49fd4bd0ebe1f24db",
+       "model_id": "3e179c434d19451bb7ab17aeada8c396",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d448ecd0865543afb6510aea0a735f83",
+       "model_id": "cea9ba9fb59b4d449a04f0434e5f1707",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2903fd8a5ca4528b5c6cbb6edcd434f",
+       "model_id": "c85ee0087d9a4a6ab1f7be037f8c2665",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "e5b111a4-a89a-42a6-b9d3-f3e65b67a6a0",
    "metadata": {
     "deletable": false,
@@ -202,28 +202,48 @@
      "output_type": "stream",
      "text": [
       ":  1\n",
-      "- 유사성 임계값 (0=모두 매치, 1=매치 없음) (추천 0.6):  0.9\n",
-      "- 유사 단어의 최대 수 (추천 5):  3\n"
+      "- 유사성 임계값 (0=모두 매치, 1=매치 없음) (추천 0.6):  0.6\n",
+      "- 유사 단어의 최대 수 (추천 5):  5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1/6) MedDRA folder에 'worsening of abdominal aortic aneurysm'랑 비슷한 용어 찾는중...검색 결과 없음.\n",
-      "(2/6) MedDRA folder에 'worsening anemia'랑 비슷한 용어 찾는중...검색 결과 없음.\n",
-      "(3/6) MedDRA folder에 'renal function aggravation'랑 비슷한 용어 찾는중...\n",
-      "    (0) renal function aggravated\n",
-      "    (1) 설정 다시선택하기 (검색 범위 확장)\n"
+      "(1/6) MedDRA folder에 'worsening of abdominal aortic aneurysm'랑 비슷한 용어 찾는중...\n",
+      "    (0) thoracoabdominal aortic aneurysm\n",
+      "    (1) abdominal aortic aneurysm\n",
+      "    (2) saccular abdominal aortic aneurysm\n",
+      "    (3) penetrating abdominal aortic ulcer\n",
+      "    (4) thoracoabdominal aortic aneurysm enlargement\n",
+      "    (5) 설정 다시선택하기 (검색 범위 확장)\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  'renal function aggravation' ≈  1\n",
-      "- 유사성 임계값 (0=모두 매치, 1=매치 없음) (추천 0.6):  0.6\n",
-      "- 유사 단어의 최대 수 (추천 5):  5\n"
+      "  'worsening of abdominal aortic aneurysm' ≈  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2/6) MedDRA folder에 'worsening anemia'랑 비슷한 용어 찾는중...\n",
+      "    (0) renal anemia\n",
+      "    (1) uremic anemia\n",
+      "    (2) renal anaemia\n",
+      "    (3) renin abnormal\n",
+      "    (4) organizing pneumonia\n",
+      "    (5) 설정 다시선택하기 (검색 범위 확장)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "  'worsening anemia' ≈  0\n"
      ]
     },
     {
@@ -263,27 +283,29 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  'worsening acute kidney injury' ≈  0\n"
+      "  'worsening acute kidney injury' ≈  5\n",
+      "- 유사성 임계값 (0=모두 매치, 1=매치 없음) (추천 0.6):  0.8\n",
+      "- 유사 단어의 최대 수 (추천 5):  10\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5/6) MedDRA folder에 'worsening of inguinal hernia'랑 비슷한 용어 찾는중...\n",
-      "    (0) sliding inguinal hernia\n",
-      "    (1) right inguinal hernia\n",
-      "    (2) left inguinal hernia\n",
-      "    (3) congenital inguinal hernia\n",
-      "    (4) double inguinal hernia\n",
-      "    (5) 설정 다시선택하기 (검색 범위 확장)\n"
+      "(4/6) MedDRA folder에 'worsening acute kidney injury'랑 비슷한 용어 찾는중...검색 결과 없음.\n",
+      "(5/6) MedDRA folder에 'worsening of inguinal hernia'랑 비슷한 용어 찾는중...검색 결과 없음.\n",
+      "(6/6) MedDRA folder에 'immune related pneumonitis'랑 비슷한 용어 찾는중...\n",
+      "    (0) immune-mediated pneumonitis\n",
+      "    (1) 설정 다시선택하기 (검색 범위 확장)\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  'worsening of inguinal hernia' ≈  0\n"
+      "  'immune related pneumonitis' ≈  1\n",
+      "- 유사성 임계값 (0=모두 매치, 1=매치 없음) (추천 0.6):  0.6\n",
+      "- 유사 단어의 최대 수 (추천 5):  10\n"
      ]
     },
     {
@@ -296,7 +318,12 @@
       "    (2) autoimmune pneumonitis\n",
       "    (3) immune-mediated myositis\n",
       "    (4) immune-mediated synovitis\n",
-      "    (5) 설정 다시선택하기 (검색 범위 확장)\n"
+      "    (5) immune-mediated nephritis\n",
+      "    (6) immune-mediated enteritis\n",
+      "    (7) immune-mediated pancreatitis\n",
+      "    (8) viral pneumonitis\n",
+      "    (9) immune-mediated uveitis\n",
+      "    (10) 설정 다시선택하기 (검색 범위 확장)\n"
      ]
     },
     {
@@ -312,8 +339,8 @@
      "text": [
       "****************************************\n",
       "AE list에 해당하는 LLT:\n",
-      "    worsening of abdominal aortic aneurysm\n",
-      "    worsening anemia\n",
+      "    worsening acute kidney injury\n",
+      "    worsening of inguinal hernia\n",
       "위 LLT는 MedDRA folder (llt.asc / mdhier.asc)에 없습니다.\n",
       "    (0) 종료\n",
       "    (1) 비슷한 용어 찾고 직접 선택\n",
@@ -327,51 +354,57 @@
      "text": [
       ":  1\n",
       "- 유사성 임계값 (0=모두 매치, 1=매치 없음) (추천 0.6):  0.6\n",
-      "- 유사 단어의 최대 수 (추천 5):  7\n"
+      "- 유사 단어의 최대 수 (추천 5):  10\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1/2) MedDRA folder에 'worsening of abdominal aortic aneurysm'랑 비슷한 용어 찾는중...\n",
-      "    (0) thoracoabdominal aortic aneurysm\n",
-      "    (1) abdominal aortic aneurysm\n",
-      "    (2) saccular abdominal aortic aneurysm\n",
-      "    (3) penetrating abdominal aortic ulcer\n",
-      "    (4) thoracoabdominal aortic aneurysm enlargement\n",
-      "    (5) abdominal aortic aneurysm hemorrhage\n",
-      "    (6) worsening of auditory acuity\n",
-      "    (7) 설정 다시선택하기 (검색 범위 확장)\n"
+      "(1/2) MedDRA folder에 'worsening acute kidney injury'랑 비슷한 용어 찾는중...\n",
+      "    (0) acute kidney injury\n",
+      "    (1) stage 3 acute kidney injury\n",
+      "    (2) stage 2 acute kidney injury\n",
+      "    (3) stage 1 acute kidney injury\n",
+      "    (4) subacute kidney injury\n",
+      "    (5) drug-induced kidney injury\n",
+      "    (6) acute kidney failure\n",
+      "    (7) acute liver injury\n",
+      "    (8) phrenic nerve injury\n",
+      "    (9) acute lung injury\n",
+      "    (10) 설정 다시선택하기 (검색 범위 확장)\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  'worsening of abdominal aortic aneurysm' ≈  0\n"
+      "  'worsening acute kidney injury' ≈  0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2/2) MedDRA folder에 'worsening anemia'랑 비슷한 용어 찾는중...\n",
-      "    (0) renal anemia\n",
-      "    (1) uremic anemia\n",
-      "    (2) renal anaemia\n",
-      "    (3) renin abnormal\n",
-      "    (4) organizing pneumonia\n",
-      "    (5) organising pneumonia\n",
-      "    (6) iatrogenic anemia\n",
-      "    (7) 설정 다시선택하기 (검색 범위 확장)\n"
+      "(2/2) MedDRA folder에 'worsening of inguinal hernia'랑 비슷한 용어 찾는중...\n",
+      "    (0) sliding inguinal hernia\n",
+      "    (1) right inguinal hernia\n",
+      "    (2) left inguinal hernia\n",
+      "    (3) congenital inguinal hernia\n",
+      "    (4) double inguinal hernia\n",
+      "    (5) oblique inguinal hernia\n",
+      "    (6) inguinal hernia\n",
+      "    (7) worsening of tinnitus\n",
+      "    (8) indirect inguinal hernia\n",
+      "    (9) direct inguinal hernia\n",
+      "    (10) 설정 다시선택하기 (검색 범위 확장)\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "  'worsening anemia' ≈  0\n"
+      "  'worsening of inguinal hernia' ≈  0\n"
      ]
     },
     {
@@ -864,7 +897,7 @@
        "44               Blood and lymphatic system disorders  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
